fix levels 2,3,4 y 6
Ya se pueden ganar los niveles 1,2,3,4 y 6 (pero con el nivel 4 hay un bug para ganar por GameController, hay una interaccion rara donde no toma en cuenta el laser creado hasta q muevas otro bloque mas)